--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^2.9.11"
+    },
+    "dependencies": {
+        "laravel-mix": "^6.0.49"
     }
 }
+
+
