--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
         "axios": "^0.25",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.4.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vite": "^2.9.11"
+        "postcss": "^8.4.14",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.54.0",
+        "sass-loader": "^13.0.2",
+        "vite": "^2.9.11",
+        "webpack": "^5.74.0"
     },
     "dependencies": {
-        "laravel-mix": "^6.0.49"
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^5.2.0"
     }
 }
-
-
