--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "sass": "^1.54.0",
         "sass-loader": "^13.0.2",
         "vite": "^2.9.11",
-        "webpack": "^5.74.0"
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
